--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -32,24 +32,24 @@ LIST(APPEND SUB_DIRS ${CMAKE_SOURCE_DIR}/src)
 # include_directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${SUB_DIRS})
-include_directories(/usr/local/include/rocketmq)
+#include_directories(/usr/local/include/rocketmq)
 include_directories(/usr/include/python2.7)
+include_directories(/System/Library/Frameworks/Python.framework/Versions/2.7/include/python2.7)
 
 
 # static
 add_library(rocketmqclientpython_static STATIC ${SRC_FILES})
 set_target_properties(rocketmqclientpython_static PROPERTIES OUTPUT_NAME "rocketmqclientpython")
-#add_dependencies(rocketmqclientpython_static)
 target_link_libraries(rocketmqclientpython_static ${deplibs})
-target_link_libraries(rocketmqclientpython_static)
+target_link_libraries(rocketmqclientpython_static ${ROCKETMQ_LIBRARIES})
+target_link_libraries(rocketmqclientpython_static ${Boost_LIBRARIES})
 
 # shared
 set(CMAKE_SHARED_LINKER_FLAGS "-fPIC -shared")
 add_library(rocketmqclientpython_shared SHARED ${SRC_FILES})
 set_target_properties(rocketmqclientpython_shared PROPERTIES OUTPUT_NAME "rocketmqclientpython")
-#add_dependencies(rocketmqclientpython_shared)
 target_link_libraries(rocketmqclientpython_shared ${deplibs})
-target_link_libraries(rocketmqclientpython_shared librocketmq.a)
+target_link_libraries(rocketmqclientpython_shared ${ROCKETMQ_LIBRARIES})
 target_link_libraries(rocketmqclientpython_shared ${Boost_LIBRARIES})
 
 # install
